--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,23 @@
 <resources>
     <string name="app_name">WanAndroid</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+
+    <string name="home">首页</string>
+    <string name="wechat">公众号</string>
+    <string name="project">项目</string>
+    <string name="navigation">导航</string>
+    <string name="knowledge_tree">知识体系</string>
+
+    <string name="favorites">收藏</string>
+    <string name="todo">待办清单</string>
+    <string name="night_mode">夜间模式</string>
+    <string name="setting">设置</string>
+    <string name="logout">退出登录</string>
+    <string name="about">关于</string>
 
     <string name="retry">重新加载</string>
+
+    <string name="exit_hint">再按一次退出</string>
+
+    <string name="user_name">用户名</string>
+
 </resources>
