--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="retry">重新加载</string>
 
     <string name="exit_hint">再按一次退出</string>
+    <string name="network_error">网络连接不可用,请检查网络!</string>
 
     <string name="user_name">用户名</string>
 
