--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="about">关于</string>
 
     <string name="retry">重新加载</string>
+    <string name="loading">加载中…</string>
 
     <string name="exit_hint">再按一次退出</string>
     <string name="network_error">网络连接不可用,请检查网络!</string>
