新增首页及搜索图标

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="user_name">用户名</string>
 
     <string name="fresh">新</string>
+    <string name="search">搜索</string>
 
 </resources>
