--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="user_name">用户名</string>
 
     <string name="fresh">新</string>
+    <string name="on_top">置顶</string>
     <string name="search">搜索</string>
 
 </resources>
