--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,8 @@
     <string name="fresh">新</string>
     <string name="on_top">置顶</string>
     <string name="search">搜索</string>
+    <string name="scan">扫码</string>
+    <string name="scan_result">扫码结果</string>
+    <string name="i_know">我知道了</string>
 
 </resources>
