--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,6 @@
     <string name="scan">扫码</string>
     <string name="scan_result">扫码结果</string>
     <string name="i_know">我知道了</string>
+    <string name="camera_permission_reason">开启摄像头权限才能扫码，请授予权限以便正常使用</string>
 
 </resources>
