--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,8 @@
     <string name="loading">加载中…</string>
     <string name="title_err">未知标题</string>
     <string name="web_page_err">网页 %s 加载失败 o(╥﹏╥)o</string>
-    <string name="no_data">暂无数据 o(╥﹏╥)o</string>
+    <string name="no_data">暂无数据 o(╥﹏╥)o \n 点击屏幕重新加载</string>
+    <string name="error_loading">加载失败 o(╥﹏╥)o \n 点击屏幕重新加载</string>
 
     <string name="exit_hint">再按一次退出</string>
     <string name="network_error">网络连接不可用,请检查网络!</string>
